--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -180,10 +180,20 @@
 
 // Dynamic Row Table 컴포넌트 - Row 추가 버튼
 .btn-dr-table-row-add {
-  padding: 0;
   position: absolute;
   top: 1.25rem; // 20px
   right: 0.3125rem; // 5px
+  padding: 0;
+}
+// Dynamic Row Table 컴포넌트 - Row 삭제 버튼
+.dr-table-row-delete {
+  display: inline-block;
+  position: absolute;
+  height: 2.5rem; // 40px
+  line-height: 2rem; // 32px
+  right: 0.3125rem; // 5px
+
+  .btn-dr-table-row-delete { padding: 0; }
 }
 
   // editbox 컴포넌트
