--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -163,6 +163,24 @@
           }
         }
       }
+      // 아코디언 컴포넌트
+      &.accordion {
+        position: relative;
+        padding-bottom: 0.625rem;; // 10px
+
+        .icon {
+          position: absolute;
+          width: 0.625rem; // 10px
+          height: 0.375rem; // 6px;
+          top: 30%;
+          right: 0.625rem; // 10px
+          opacity: 0;
+          
+          &.on { opacity: 1; }
+          &.icon-arrow-down { @include background($icon-folder-path + 'icon_arrow_bottom.svg', 0.625rem 0.375rem, no-repeat, center, center, null); } // 10px 6px
+          &.icon-arrow-up { @include background($icon-folder-path + 'icon_arrow_up.svg', 0.625rem 0.375rem, no-repeat, center, center, null); } // 10px 6px
+        }
+      }
     }
   }
   // editbox 컴포넌트
