--- a/src/main/resources/public/src/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/src/scss/theme/default/_layout.scss
@@ -101,6 +101,7 @@
 // 업무흐름 관리 > 코드
 // 업무흐름 관리 > 이미지 관리
 // 업무흐름 관리 > 패턴
+// 업무흐름 관리 > 문서번호
 .notice-header,
 .faq-header,
 .download-header,
@@ -115,7 +116,8 @@
 .role-header,
 .code-header,
 .image-header,
-.numbering-pattern-header {
+.numbering-pattern-header,
+.numbering-rule-header {
   padding: 2.188rem 3.75rem 0 3.75rem; // 35px 60px 0px 60px
   background-color: $light-gray;
 }
@@ -138,6 +140,7 @@
 // 업무흐름 관리 > 역할, 권한
 // 업무흐름 관리 > 코드
 // 업무흐름 관리 > 패턴
+// 업무흐름 관리 > 문서번호
 .notice-content,
 .faq-content,
 .download-content,
@@ -151,7 +154,8 @@
 .auth-content,
 .role-content,
 .code-content,
-.numbering-pattern-content {
+.numbering-pattern-content,
+.numbering-rule-content {
   padding: 0.9375rem 3.75rem; // 15px 60px
   background-color: $light-gray;
 }
@@ -285,18 +289,17 @@
   background-color: $white;
   border-top: $layout-header-border;
 }
-// 역할, 권한, 코드, 패턴
+// 역할, 권한, 코드, 패턴, 문서번호
 .auth-content-edit,
 .role-content-edit,
 .code-content-edit,
-.numbering-pattern-content-edit {
+.numbering-pattern-content-edit,
+.numbering-rule-content-edit {
   height: 41.25rem; // 660px
   margin: 0 0 1.875rem 0; // 30px
   // 스크롤바 
   .edit-form {
-    height: inherit;
     padding: 0 1.875rem 0 4.0625rem; // 0 30px 0 65px
-    overflow: auto;
 
     .edit-row {  margin-top: 0.625rem; } // 10px
   }
