--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2042,7 +2042,8 @@ button .icon-plus {
 .role-header,
 .code-header,
 .image-header,
-.numbering-pattern-header {
+.numbering-pattern-header,
+.numbering-rule-header {
   padding: 2.188rem 3.75rem 0 3.75rem;
   background-color: #F7F8F9;
 }
@@ -2068,7 +2069,8 @@ button .icon-plus {
 .auth-content,
 .role-content,
 .code-content,
-.numbering-pattern-content {
+.numbering-pattern-content,
+.numbering-rule-content {
   padding: 0.9375rem 3.75rem;
   background-color: #F7F8F9;
 }
@@ -2195,22 +2197,23 @@ button .icon-plus {
 .auth-content-edit,
 .role-content-edit,
 .code-content-edit,
-.numbering-pattern-content-edit {
+.numbering-pattern-content-edit,
+.numbering-rule-content-edit {
   height: 41.25rem;
   margin: 0 0 1.875rem 0;
 }
 .auth-content-edit .edit-form,
 .role-content-edit .edit-form,
 .code-content-edit .edit-form,
-.numbering-pattern-content-edit .edit-form {
-  height: inherit;
+.numbering-pattern-content-edit .edit-form,
+.numbering-rule-content-edit .edit-form {
   padding: 0 1.875rem 0 4.0625rem;
-  overflow: auto;
 }
 .auth-content-edit .edit-form .edit-row,
 .role-content-edit .edit-form .edit-row,
 .code-content-edit .edit-form .edit-row,
-.numbering-pattern-content-edit .edit-form .edit-row {
+.numbering-pattern-content-edit .edit-form .edit-row,
+.numbering-rule-content-edit .edit-form .edit-row {
   margin-top: 0.625rem;
 }
 
@@ -4735,12 +4738,10 @@ body.modal-active {
   position: absolute;
   z-index: 1;
 }
-
 .header-tooltip .tooltip-contents span {
   color: #ffffff;
   font-weight: 500;
 }
-
 .header-tooltip:hover .tooltip-contents {
   visibility: visible;
   animation-delay: 0s;
