--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -2179,6 +2179,7 @@ button.ghost-line:disabled .icon {
 }
 
 .btn-option .icon-minus {
+  display: inline-block;
   width: 0.875rem;
   height: 0.875rem;
   -webkit-mask-image: url("../media/icons/icon_minus.svg");
@@ -2191,6 +2192,7 @@ button.ghost-line:disabled .icon {
 }
 
 .btn-option .icon-plus {
+  display: inline-block;
   width: 0.875rem;
   height: 0.875rem;
   -webkit-mask-image: url("../media/icons/icon_plus.svg");
@@ -4435,6 +4437,10 @@ body.modal-active {
   cursor: move;
 }
 
+.component .move-handler.disabled {
+  pointer-events: none;
+}
+
 .component .field-group {
   display: flex;
   flex-wrap: wrap;
@@ -4618,28 +4624,13 @@ body.modal-active {
   box-shadow: 0 0 0 0.125rem #0098FF inset;
 }
 
-.component .btn-dr-table-row-add {
-  position: absolute;
-  top: 1.25rem;
-  right: 0.3125rem;
-  padding: 0;
-}
-
-.component .dr-table-row-delete {
-  display: inline-block;
-  position: absolute;
-  height: 2.5rem;
-  line-height: 2rem;
-  right: 0.3125rem;
-}
-
-.component .dr-table-row-delete .btn-dr-table-row-delete {
-  padding: 0;
-}
-
 .component .field-group .field-content.accordion {
   position: relative;
   padding-bottom: 0.625rem;
+}
+
+.component .field-group .field-content.accordion .label {
+  margin-right: 1.875rem;
 }
 
 .component .field-group .field-content.accordion .icon {
@@ -4669,6 +4660,25 @@ body.modal-active {
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: center;
+}
+
+.component .btn-dr-table-row-add {
+  position: absolute;
+  top: 1.25rem;
+  right: 0.3125rem;
+  padding: 0;
+}
+
+.component .dr-table-row-delete {
+  display: inline-block;
+  position: absolute;
+  height: 2.5rem;
+  line-height: 2rem;
+  right: 0.3125rem;
+}
+
+.component .dr-table-row-delete .btn-dr-table-row-delete {
+  padding: 0;
 }
 
 .component[data-type="editbox"] {
@@ -4833,7 +4843,7 @@ body.modal-active {
   cursor: pointer;
 }
 
-.component:hover .move-handler {
+.component:hover .move-handler:not(.disabled) {
   opacity: 1;
 }
 
