#8358 Accordion 컴포넌트 추가 : 신청서 컴포넌트 출력 및 접었다 펴는 기능 추가

--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -184,7 +184,7 @@
         position: relative;
         padding-bottom: 0.625rem;; // 10px
 
-        .label { margin-right: 1.875rem } // 30px
+        label { margin-right: 1.875rem } // 30px
 
         .icon {
           position: absolute;
