#8358 Accordion 컴포넌트 추가 : 다른이름으로 저장시 아코디언 컴포넌트ID 재할당

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -4627,6 +4627,7 @@ body.modal-active {
 .component .field-group .field-content.accordion {
   position: relative;
   padding-bottom: 0.625rem;
+  cursor: pointer;
 }
 
 .component .field-group .field-content.accordion label {
