--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -183,6 +183,7 @@
       &.accordion {
         position: relative;
         padding-bottom: 0.625rem;; // 10px
+        cursor: pointer;
 
         label { margin-right: 1.875rem } // 30px
 
