--- a/src/main/resources/public/src/scss/portal/_variables.scss
+++ b/src/main/resources/public/src/scss/portal/_variables.scss
@@ -113,5 +113,9 @@ $session-invalid-bg-color:                   #F2F5F9;
 $session-invalid-border:                     0.0625rem solid $line-gray;
 
 ////////////////////////// 에러  //////////////////////////
-$error-bg-color:                   #F2F5F9;
-$error-border:                     0.0625rem solid $line-gray;
+$error-bg-color:                             #F2F5F9;
+$error-border:                               0.0625rem solid $line-gray;
+
+///////////////////////// 메일 인증 ////////////////////////////
+$email-certificate-bg-color:                 #F2F5F9;
+$semail-certificate-border:                  0.0625rem solid $line-gray;
