scss, css file commit

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2285,6 +2285,16 @@ button .icon-plus {
   padding: 0;
 }
 
+.numbering-rule-content-edit .select-pattern-type {
+  width: 20rem;
+}
+.numbering-rule-content-edit .pattern-type {
+  width: 7.5rem;
+}
+.numbering-rule-content-edit .btn-minus {
+  padding: 0;
+}
+
 .notice-content-view,
 .faq-content-view,
 .download-content-view,
