#8358 컴포넌트 추가 - Accordion 컴포넌트 : 완료 문서일 경우 동작하지 않는 버그 수정

--- a/src/main/resources/public/template/form/formEditPreview.html
+++ b/src/main/resources/public/template/form/formEditPreview.html
@@ -27,7 +27,7 @@
                 <div class="document-main-header flex-row justify-content-end align-items-center">
                     <button class="default-fill" th:text="#{common.btn.close}" onclick="window.close();"></button>
                 </div>
-                <div class="drawing-board" id="document-panel" data-readonly="true"></div>
+                <div class="drawing-board" id="document-panel" data-readonly="true" data-status="preview"></div>
             </div>
         </div>
     </form>
