결함 #9716 [단위테스트 - 포탈] 이메일 인증관련 디자인 : 메시지 수정

--- a/src/main/resources/public/template/certification/status.html
+++ b/src/main/resources/public/template/certification/status.html
@@ -90,7 +90,7 @@
             url: url,
             params: new FormData(document.getElementById("sendForm")),
             callbackFunc: function() {
-                aliceJs.alertWarning('[[#{authentication.msg.resentAuthentication}]]<br/>[[#{authentication.msg.emailCheck}]]');
+                aliceJs.alertWarning(i18n.msg('authentication.msg.resentAuthentication') + '\n' + i18n.msg('authentication.msg.emailCheck'));
             }
         };
         aliceJs.sendXhr(opt)
