#9564 [FAQ] 제목 말줄임 1. 내용 말줄임 안되는 현상 수정

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1981,6 +1981,7 @@ button .icon-plus {
 }
 .itsm-container .main .view-content .view-text {
   margin: 0;
+  word-break: break-all;
 }
 .itsm-container .aside {
   flex-shrink: 0;
@@ -4735,12 +4736,10 @@ body.modal-active {
   position: absolute;
   z-index: 1;
 }
-
 .header-tooltip .tooltip-contents span {
   color: #ffffff;
   font-weight: 500;
 }
-
 .header-tooltip:hover .tooltip-contents {
   visibility: visible;
   animation-delay: 0s;
@@ -5080,6 +5079,7 @@ body.modal-active {
 }
 .itsm-popup .view-content .view-text {
   margin: 0;
+  word-break: break-all;
 }
 .itsm-popup .custom-code-content-popup.view {
   height: auto;
