MR 수정 1. auto-break 사용

--- a/src/main/resources/public/src/scss/theme/default/_mixin.scss
+++ b/src/main/resources/public/src/scss/theme/default/_mixin.scss
@@ -166,10 +166,7 @@
       min-height: 13.4375rem; // 215px
       padding: 0.3125rem 1.25rem; // 5px 20px
 
-      .view-text {
-        margin: 0;
-        word-break: break-all;
-      }
+      .view-text { margin: 0; }
     }
   }
 }
