--- a/src/main/resources/public/template/faq/faqView.html
+++ b/src/main/resources/public/template/faq/faqView.html
@@ -30,7 +30,7 @@
             <div class="flex-column view-row">
                 <div class="view-content">
                     <pre class="space-line">
-                        <span class="view-text" th:text="${faq?.faqContent}"/>
+                        <span class="view-text auto-break" th:text="${faq?.faqContent}"/>
                     </pre>
                 </div>
             </div>
