수정사항 #9865 Dynamic Row Table 컴포넌트 - [완료상태 또는 수정불가 상태 처리]

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -4873,6 +4873,14 @@ body.modal-active {
   pointer-events: none;
 }
 
+.component[data-displayType="readonly"] .btn-dr-table-row-add {
+  opacity: 0;
+}
+
+.component[data-displayType="readonly"] .dr-table-row-delete {
+  opacity: 0;
+}
+
 .context-menu {
   display: none;
   position: absolute;
