--- a/src/main/resources/public/template/token/tokenPrint.html
+++ b/src/main/resources/public/template/token/tokenPrint.html
@@ -17,7 +17,7 @@
                 <span class="float-right align-right" id="print-information"></span>
             </div>
             <div class="print-area justify-content-center">
-                <div class="drawing-board" id="document-panel" data-status="print"></div>
+                <div class="drawing-board" id="document-panel" data-display="print"></div>
             </div>
         </div>
     </div>
