--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -131,7 +131,7 @@
             // view 일 경우, 컴포넌트들의 세부 값을 편집 할 수 없음
             const documentPanel = document.getElementById('document-panel');
             documentPanel.setAttribute('data-readonly', true);
-            documentPanel.setAttribute('data-status', 'complete');
+            documentPanel.setAttribute('data-display', 'complete');
 
             aliceForm.init(aliceDocument.initToken, '[[${tokenId}]]');
             var tokenDtEle = document.querySelectorAll('td[name=tokenDt]');
