--- a/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
+++ b/src/main/resources/public/template/numbering-rule/numberingRuleEdit.html
@@ -300,7 +300,7 @@
                                 window.location.href = '/numberingRules/edit';
                             });
                             break;
-                        case STATUS_ERROR_PATTERN_USED:
+                        case STATUS_ERROR_RULE_USED:
                             aliceJs.alertWarning(i18n.msg('rule.msg.usedRule'));
                             break;
                         default:
@@ -324,7 +324,7 @@
                                 window.location.href = '/numberingRules/edit';
                             });
                             break;
-                        case STATUS_ERROR_PATTERN_USED:
+                        case STATUS_ERROR_RULE_USED:
                             aliceJs.alertWarning(i18n.msg('rule.msg.usedRule'));
                             break;
                         default:
