#9766 모달 버튼 직관적으로 변경 하기 1. 버튼명 수정

--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -93,14 +93,14 @@
                 body: createModalContent(),
                 classes: 'token-list',
                 buttons: [{
-                    content: i18n.msg('common.btn.add'),
+                    content: i18n.msg('common.btn.select'),
                     classes: "point-fill",
                     bindKey: false,
                     callback: function(modal) {
                         saveTokenList();
                     }
                 },{
-                    content: i18n.msg('common.btn.close'),
+                    content: i18n.msg('common.btn.cancel'),
                     classes: "default-line",
                     bindKey: false,
                     callback: function(modal) {
