--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -215,7 +215,7 @@
                                 saveDocument(method, documentId);
                             }
                         },{
-                            content: i18n.msg('common.btn.close'),
+                            content: i18n.msg('common.btn.cancel'),
                             classes: "default-line",
                             bindKey: false,
                             callback: function(modal) {
@@ -309,7 +309,7 @@
                                 saveDocumentDisplay(documentId);
                             }
                         },{
-                            content: i18n.msg('common.btn.close'),
+                            content: i18n.msg('common.btn.cancel'),
                             classes: "default-line",
                             bindKey: false,
                             callback: function(modal) {
