--- a/src/main/resources/public/template/form/formSearch.html
+++ b/src/main/resources/public/template/form/formSearch.html
@@ -215,7 +215,7 @@
                         saveForm();
                     }
                 },{
-                    content: i18n.msg('common.btn.close'),
+                    content: i18n.msg('common.btn.cancel'),
                     classes: "default-line",
                     bindKey: false,
                     callback: function(modal) {
