--- a/src/main/resources/public/template/process/processAttachFileView.html
+++ b/src/main/resources/public/template/process/processAttachFileView.html
@@ -36,7 +36,7 @@
             </div>
             <div class="thumbnail-modal-buttons">
                 <div class="btn-list">
-                    <button class="default-line" th:text="#{common.btn.check}" onclick="selectedImageSave();"></button>
+                    <button class="default-line" th:text="#{common.btn.select}" onclick="selectedImageSave();"></button>
                     <button class="default-line" th:text="#{common.btn.close}" onclick="window.close();"></button>
                 </div>
             </div>
