--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -177,9 +177,9 @@
                                 }
                             });
                         }
-                        // 닫기
+                        // 취소
                         options.buttons.push({
-                            content: i18n.msg('common.btn.close'),
+                            content: i18n.msg('common.btn.cancel'),
                             classes: "default-line",
                             bindKey: false,
                             callback: function(modal) {
