#9551 줄바꿈 처리 1. 댓글에 줄바꿈 처리가 안되는 현상 수정

--- a/src/main/resources/public/template/token/tokenEditTab.html
+++ b/src/main/resources/public/template/token/tokenEditTab.html
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="comment-row">
-                <span th:text="${comment.content}"></span>
+                <span class="auto-break space-line" th:text="${comment.content}"></span>
             </div>
         </div>
         <div id="comment-container" class="comment comment-input flex-row align-items-start"></div>
