#9536 [전체] 검색조건 통일
* 사용자의 의도에 따라서 조회 가능토록 조회 기능 통일
- 띄여쓰기(공백) 포함 시켜서 조회되도록
- 대소문자 구별이 되도록
- 한글자 이상이면 자동 조회가 되도록

--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -79,10 +79,8 @@
         * 이벤트리스너 초기화
         */
         function initEventListener() {
-            document.getElementById('searchValue').addEventListener('keyup', (e) => {
-                if (e.key === 'Enter') {
-                    portalSearch(false);
-                }
+            document.getElementById('searchValue').addEventListener('keyup', function () {
+                portalSearch(false);
             });
         }
 
@@ -138,12 +136,12 @@
                 if (offsetCount === 0) {
                     offsetCount = aliceJs.searchDataCount;
                 }
-                urlParam = '&searchValue=' + encodeURIComponent(document.getElementById('searchValue').value.trim())
+                urlParam = '&searchValue=' + encodeURIComponent(document.getElementById('searchValue').value)
                     + '&offset=' + offsetCount;
                 restSubmit('get', '/rest/portals?' + urlParam, isScroll);
             } else {
                 offsetCount = 0;
-                urlParam = '&searchValue=' + encodeURIComponent(document.getElementById('searchValue').value.trim())
+                urlParam = '&searchValue=' + encodeURIComponent(document.getElementById('searchValue').value)
                     + '&offset=' + offsetCount;
                 restSubmit('get', '/portals?' + urlParam, isScroll);
             }
