#9536 [전체] 검색조건 통일
* 사용자의 의도에 따라서 조회 가능토록 조회 기능 통일
- 띄여쓰기(공백) 포함 시켜서 조회되도록
- 대소문자 구별이 되도록
- 한글자 이상이면 자동 조회가 되도록

--- a/src/main/resources/public/template/user/userSearch.html
+++ b/src/main/resources/public/template/user/userSearch.html
@@ -44,7 +44,7 @@
 
         function getUserList(isScroll) {
             const searchOpt = {
-                search: document.getElementById('search').value.trim()
+                search: document.getElementById('search').value
             }
             let urlParam = 'search=' + searchOpt.search;
             if (isScroll) {
